Fix possible DirNotFoundException and deprecations