@@ -1,5 +1,5 @@
 /**
- * 
+ *
  */
 package de.hsb.ismi.jbs.gui.game;
 
@@ -41,9 +41,9 @@ import net.miginfocom.swing.MigLayout;
  */
 public class PreGamePanel extends JPanel {
 
-	
+
 	/**
-	 * 
+	 *
 	 */
 	private static final long serialVersionUID = -8550769174904673444L;
 	private JPanel header;
@@ -53,7 +53,7 @@ public class PreGamePanel extends JPanel {
 	private JPanel mixedPanel;
 	private JPanel shipPanel;
 	private JPanel playerPanel;
-	
+
 	private JBSButton btnCancel;
 	private JBSButton btnContinue;
 
@@ -72,18 +72,18 @@ public class PreGamePanel extends JPanel {
 	private JCheckBox chckbxUseCannon;
 	private JCheckBox chckbxUseNavalMines;
 	private JBSButtonGroup btnGroup;
-	
+
 	/** The GameType of this Panel */
 	private JBSGameType gameType;
 	private ArrayList<JBSPlayer> players = new ArrayList<>(0);
-	
-	
+
+
 	/**
 	 * Create the panel.
 	 */
 	public PreGamePanel(JBSGUI parent, JBSGameType type) {
-		setOpaque(false);	
-		
+		setOpaque(false);
+
 		btnGroup = new JBSButtonGroup();
 		playerPanels = new PlayerSlotPanel[8];
 		for(int i = 0; i < playerPanels.length; i++){
@@ -99,33 +99,33 @@ public class PreGamePanel extends JPanel {
 		playerPanels[0].setActiveSelected(true);
 		playerPanels[0].getNameField().setEditable(false);
 		playerPanels[1].setActiveSelected(true);
-		
+
 		gameType = type;
 		header = parent.generateHeader();
 		setLayout(new BorderLayout(0, 0));
 		add(header, BorderLayout.NORTH);
-		
-		
-		
+
+
+
 		centerPanel = new JPanel();
 		centerPanel.setOpaque(true);
 		centerPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
 		centerPanel.setBorder(new TitledBorder(UIManager.getBorder("TitledBorder.border"), JBattleships.game.getLocalization("GAME_TITLE_MAIN_SETTINGS"), TitledBorder.CENTER, TitledBorder.TOP, new Font("Tahoma", Font.PLAIN, 25), new Color(0, 0, 0)));
 		add(new AlphaContainer(centerPanel), BorderLayout.CENTER);
 		centerPanel.setLayout(new BorderLayout(0, 0));
-		
+
 		buttonPanel = new JPanel();
 		buttonPanel.setOpaque(false);
 		centerPanel.add(buttonPanel, BorderLayout.SOUTH);
 		buttonPanel.setLayout(new FlowLayout(FlowLayout.CENTER, 5, 5));
-		
+
 		btnCancel = new JBSButton(JBattleships.game.getLocalization("GAME_CANCEL"));
 		btnCancel.addActionListener(e -> {
 			DebugLog.logInfo("Called Command: \"" + e.getActionCommand() + "\" on " +  PreGamePanel.this.getClass());
 			parent.restorePrevContainer();
 		});
 		buttonPanel.add(new AlphaContainer(btnCancel) );
-		
+
 		btnContinue = new JBSButton(JBattleships.game.getLocalization("GAME_CONTINUE"));
 		btnContinue.addActionListener(e -> {
 					if(((Integer)fieldSizeSpinner.getValue())*((Integer)fieldSizeSpinner.getValue())-30 >= ((Integer)destroyerSpinner.getValue())*15+((Integer)subSpinner.getValue())*9+((Integer)frigateSpinner.getValue())*9+((Integer)corvetteSpinner.getValue())*6){
@@ -148,7 +148,7 @@ public class PreGamePanel extends JPanel {
 							}
 						}
 						int[] count = new int[4];
-						
+
 						try{
 							count[0] = ((Integer)destroyerSpinner.getValue());
 						}catch(ClassCastException cce){
@@ -169,7 +169,7 @@ public class PreGamePanel extends JPanel {
 						}catch(ClassCastException cce){
 							DebugLog.logError(cce);
 						}
-						
+
 						int fieldSize = 16;
 						try{
 							fieldSize = ((Integer)fieldSizeSpinner.getValue());
@@ -179,26 +179,26 @@ public class PreGamePanel extends JPanel {
 						gm.createGame(gameType,players.toArray(new JBSPlayer[players.size()]), fieldSize, count);
 						DebugLog.logInfo("Created Game!");
 						DebugLog.logInfo(gm.toString());
-						
+
 						parent.swapContainer(new PreGamePlacingPanel(parent));
 					}
 
 		});
 		buttonPanel.add(new AlphaContainer(btnContinue) );
-		
+
 		settingsPanel = new JPanel();
 		settingsPanel.setOpaque(false);
 		settingsPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
 		centerPanel.add(settingsPanel, BorderLayout.CENTER);
 		settingsPanel.setLayout(new GridLayout(1, 0, 0, 0));
-		
+
 		mixedPanel = new JPanel();
 		mixedPanel.setOpaque(false);
 		mixedPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
 		mixedPanel.setBorder(new TitledBorder(null, JBattleships.game.getLocalization("GAME_TITLE_OTHER_SETTINGS"), TitledBorder.CENTER, TitledBorder.TOP, JBSGUI.MAIN_FONT, null));
 		settingsPanel.add(mixedPanel);
 		mixedPanel.setLayout(new MigLayout("", "[grow,fill]", "[5%:n][60%:n,grow,fill]"));
-		
+
 		otherPanel = new JPanel();
 		otherPanel.setOpaque(false);
 		otherPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
@@ -209,7 +209,7 @@ public class PreGamePanel extends JPanel {
 		gbl_otherPanel.columnWeights = new double[]{0.0, 0.0, Double.MIN_VALUE};
 		gbl_otherPanel.rowWeights = new double[]{0.0};
 		otherPanel.setLayout(gbl_otherPanel);
-		
+
 		lblFieldSize = new JLabel(JBattleships.game.getLocalization("GAME_FIELD_SIZE"));
 		lblFieldSize.setFont(JBSGUI.MAIN_FONT);
 		lblFieldSize.setHorizontalAlignment(SwingConstants.TRAILING);
@@ -221,10 +221,10 @@ public class PreGamePanel extends JPanel {
 		gbc_lblFieldSize.gridx = 0;
 		gbc_lblFieldSize.gridy = 0;
 		otherPanel.add(lblFieldSize, gbc_lblFieldSize);
-		
+
 		fieldSizeSpinner = new JSpinner();
 		fieldSizeSpinner.setFont(JBSGUI.MAIN_FONT);
-		fieldSizeSpinner.setModel(new SpinnerNumberModel(new Integer(16), new Integer(10), new Integer(20), new Integer(1)));
+		fieldSizeSpinner.setModel(new SpinnerNumberModel(Integer.valueOf(16), Integer.valueOf(10), Integer.valueOf(20), Integer.valueOf(1)));
 		GridBagConstraints gbc_fieldSizeSpinner = new GridBagConstraints();
 		gbc_fieldSizeSpinner.fill = GridBagConstraints.HORIZONTAL;
 		gbc_fieldSizeSpinner.weighty = 1.0;
@@ -232,7 +232,7 @@ public class PreGamePanel extends JPanel {
 		gbc_fieldSizeSpinner.gridx = 1;
 		gbc_fieldSizeSpinner.gridy = 0;
 		otherPanel.add(fieldSizeSpinner, gbc_fieldSizeSpinner);
-		
+
 		chckbxUseNavalMines = new JCheckBox(JBattleships.game.getLocalization("GAME_USE_NAVAL_MINES"));
 		chckbxUseNavalMines.setOpaque(false);
 		chckbxUseNavalMines.setVisible(false);
@@ -240,7 +240,7 @@ public class PreGamePanel extends JPanel {
 		gbc_chckbxUseNavalMines.insets = new Insets(0, 0, 0, 5);
 		gbc_chckbxUseNavalMines.gridx = 0;
 		gbc_chckbxUseNavalMines.gridy = 1;
-		
+
 		chckbxUseCannon = new JCheckBox(JBattleships.game.getLocalization("GAME_USE_COASTAL_ARTILLERY"));
 		chckbxUseCannon.setOpaque(false);
 		chckbxUseCannon.setVisible(false);
@@ -249,7 +249,7 @@ public class PreGamePanel extends JPanel {
 		gbc_chckbxUseCannon.weightx = 1.0;
 		gbc_chckbxUseCannon.gridx = 1;
 		gbc_chckbxUseCannon.gridy = 1;
-		
+
 		playerPanel = new JPanel();
 		playerPanel.setOpaque(false);
 		playerPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
@@ -260,7 +260,7 @@ public class PreGamePanel extends JPanel {
 			pgpp.setOpaque(false);
 			playerPanel.add(pgpp);
 		}
-		
+
 		shipPanel = new JPanel();
 		shipPanel.setOpaque(false);
 		shipPanel.setBackground(JBSGUI.BACKGROUND_COLOR);
@@ -270,7 +270,7 @@ public class PreGamePanel extends JPanel {
 		gbl_shipPanel.columnWeights = new double[]{0.0, 0.0};
 		gbl_shipPanel.rowWeights = new double[]{0.0, 0.0, 0.0, 0.0};
 		shipPanel.setLayout(gbl_shipPanel);
-		
+
 		lblDestroyer = new JLabel(JBattleships.game.getLocalization("GAME_DESTROYERS"));
 		lblDestroyer.setFont(JBSGUI.MAIN_FONT);
 		GridBagConstraints gbc_lblDestroyer = new GridBagConstraints();
@@ -281,10 +281,10 @@ public class PreGamePanel extends JPanel {
 		gbc_lblDestroyer.gridx = 0;
 		gbc_lblDestroyer.gridy = 0;
 		shipPanel.add(lblDestroyer, gbc_lblDestroyer);
-		
+
 		destroyerSpinner = new JSpinner();
 		destroyerSpinner.setFont(JBSGUI.MAIN_FONT);
-		destroyerSpinner.setModel(new SpinnerNumberModel(new Integer(1), new Integer(0), new Integer(3), new Integer(1)));
+		destroyerSpinner.setModel(new SpinnerNumberModel(Integer.valueOf(1), Integer.valueOf(0), Integer.valueOf(3), Integer.valueOf(1)));
 		GridBagConstraints gbc_destroyerSpinner = new GridBagConstraints();
 		gbc_destroyerSpinner.weighty = 1.0;
 		gbc_destroyerSpinner.weightx = 1.0;
@@ -293,7 +293,7 @@ public class PreGamePanel extends JPanel {
 		gbc_destroyerSpinner.gridx = 1;
 		gbc_destroyerSpinner.gridy = 0;
 		shipPanel.add(destroyerSpinner, gbc_destroyerSpinner);
-		
+
 		lblFrigate = new JLabel(JBattleships.game.getLocalization("GAME_FRIGATES"));
 		lblFrigate.setFont(JBSGUI.MAIN_FONT);
 		GridBagConstraints gbc_lblFrigate = new GridBagConstraints();
@@ -304,10 +304,10 @@ public class PreGamePanel extends JPanel {
 		gbc_lblFrigate.gridx = 0;
 		gbc_lblFrigate.gridy = 1;
 		shipPanel.add(lblFrigate, gbc_lblFrigate);
-		
+
 		frigateSpinner = new JSpinner();
 		frigateSpinner.setFont(JBSGUI.MAIN_FONT);
-		frigateSpinner.setModel(new SpinnerNumberModel(new Integer(2), new Integer(0), new Integer(3), new Integer(1)));
+		frigateSpinner.setModel(new SpinnerNumberModel(Integer.valueOf(2), Integer.valueOf(0), Integer.valueOf(3), Integer.valueOf(1)));
 		GridBagConstraints gbc_frigateSpinner = new GridBagConstraints();
 		gbc_frigateSpinner.weighty = 1.0;
 		gbc_frigateSpinner.weightx = 1.0;
@@ -316,7 +316,7 @@ public class PreGamePanel extends JPanel {
 		gbc_frigateSpinner.gridx = 1;
 		gbc_frigateSpinner.gridy = 1;
 		shipPanel.add(frigateSpinner, gbc_frigateSpinner);
-		
+
 		lblCorvette = new JLabel(JBattleships.game.getLocalization("GAME_SUBMARINES"));
 		lblCorvette.setFont(JBSGUI.MAIN_FONT);
 		GridBagConstraints gbc_lblCorvette = new GridBagConstraints();
@@ -327,10 +327,10 @@ public class PreGamePanel extends JPanel {
 		gbc_lblCorvette.gridx = 0;
 		gbc_lblCorvette.gridy = 2;
 		shipPanel.add(lblCorvette, gbc_lblCorvette);
-		
+
 		corvetteSpinner = new JSpinner();
 		corvetteSpinner.setFont(JBSGUI.MAIN_FONT);
-		corvetteSpinner.setModel(new SpinnerNumberModel(new Integer(2), new Integer(0), new Integer(3), new Integer(1)));
+		corvetteSpinner.setModel(new SpinnerNumberModel(Integer.valueOf(2), Integer.valueOf(0), Integer.valueOf(3), Integer.valueOf(1)));
 		GridBagConstraints gbc_spinner_2 = new GridBagConstraints();
 		gbc_spinner_2.weighty = 1.0;
 		gbc_spinner_2.weightx = 1.0;
@@ -339,7 +339,7 @@ public class PreGamePanel extends JPanel {
 		gbc_spinner_2.gridx = 1;
 		gbc_spinner_2.gridy = 2;
 		shipPanel.add(corvetteSpinner, gbc_spinner_2);
-		
+
 		lblSubmarines = new JLabel(JBattleships.game.getLocalization("GAME_CORVETTES"));
 		lblSubmarines.setFont(JBSGUI.MAIN_FONT);
 		GridBagConstraints gbc_lblSubmarines = new GridBagConstraints();
@@ -350,10 +350,10 @@ public class PreGamePanel extends JPanel {
 		gbc_lblSubmarines.gridx = 0;
 		gbc_lblSubmarines.gridy = 3;
 		shipPanel.add(lblSubmarines, gbc_lblSubmarines);
-		
+
 		subSpinner = new JSpinner();
 		subSpinner.setFont(JBSGUI.MAIN_FONT);
-		subSpinner.setModel(new SpinnerNumberModel(new Integer(3), new Integer(0), new Integer(3), new Integer(1)));
+		subSpinner.setModel(new SpinnerNumberModel(Integer.valueOf(3), Integer.valueOf(0), Integer.valueOf(3), Integer.valueOf(1)));
 		GridBagConstraints gbc_subSpinner = new GridBagConstraints();
 		gbc_subSpinner.fill = GridBagConstraints.HORIZONTAL;
 		gbc_subSpinner.weighty = 1.0;
